integration/tests/error_assert_file.err
error: Assert Body Value
  --> tests/error_assert_file.hurl:8:1
   |
 8 | file,data.txt;
   | ^ actual value is <hex, 48656c6c6f;>
   |

